fix incorrect css wrapping rule

--- a/src/kibana/styles/main.less
+++ b/src/kibana/styles/main.less
@@ -102,7 +102,8 @@ ul.navbar-inline li {
   opacity: 90%;
 
   &-inner {
-    word-break: break-word;
+    word-break: break-all;
+    word-wrap: break-word;
     white-space: normal;
   }
 }
